--- a/src/Component2/AdminDashboard/AdminDashRight/AdminAllWriter/AdminAllWriter.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminAllWriter/AdminAllWriter.css
@@ -3,17 +3,9 @@
     height: 90vh;
     display: flex;
     flex-direction: column;
+    /* background-color: blue; */
     /* align-items: center; */
     /* justify-content: center; */
-}
-.AdminAllWriterH1{
-    width: 100%;
-    height: 10%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* background-color: red; */
-    color: #0455B4;
 }
 .AdminAllWriterWrapper{
     width: 100%;
@@ -24,20 +16,22 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: space-evenly;
+    /* justify-content: space-between; */
     overflow-y: scroll;
     gap: 10px;
+    padding-top: 10px;
 
 }
 .AdminAllWriterWrap{
     width: 80%;
-    height: 100%;
+    height: 10%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     /* align-items: center; */
     /* background-color: pink; */
     gap: 20px;
+    cursor: pointer;
 }
 .AdminAllWriterList{
     width: 100%;
