--- a/src/Component2/AdminDashboard/AdminDashRight/AdminDashCreateWriter/AdminDashCreateWriterNextContent/AdminDashCreateWriterNextContent.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminDashCreateWriter/AdminDashCreateWriterNextContent/AdminDashCreateWriterNextContent.css
@@ -48,7 +48,7 @@
     width: 100%;
     height: 15%;
     padding: 10px;
-    background-color: #007bff;
+    background-color: #0455B4;
     color: #fff;
     border: none;
     border-radius: 3px;
@@ -108,5 +108,19 @@
       border-top: none;
       border-left: none;
       border-right: none;
+    }
+    button {
+      width: 100%;
+      height: 15%;
+      padding: 10px;
+      background-color: #0455B4;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    
+    button:hover {
+      background-color: #0056b3;
     }
   }
