--- a/src/Authentication/LoginPage/Log.css
+++ b/src/Authentication/LoginPage/Log.css
@@ -230,6 +230,12 @@
     }
     .EText1 button{
         width: 100%;
+        height: 50px;
+        background-color: #0455B4;
+        border: none;
+        border-radius: 7px;
+        color: white;
+        cursor: pointer;
     }
     .AdminwelcomeMssg{
     width: 100%;
